messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
